--- a/javascript/operator/operator1.html
+++ b/javascript/operator/operator1.html
@@ -30,6 +30,12 @@
 		var obj2 = {
 			valueOf : function() { return 1}
 		};
+		// form butsalt @2016.9.30
+		// 如果加数中有对象，则会尝试获取这个对象的原始值
+	    // 方法是：先调用这个对象的valueOf方法获取原始值，如果返回的是其本身则调用toString获取原始值
+	    // Date对象获取原始值时直接调用toString
+	    // 如果加数其中一方是字符串，则另一方也会被转换成字符串，然后进行字符串拼接
+	    // 如果加数双方都已经是基本类型，且不为字符串，则都会被转换成数值，然后进行加法计算
 		console.log(++obj2); //2
 	</script>
 </body>
