--- a/javascript/Date.html
+++ b/javascript/Date.html
@@ -16,7 +16,23 @@
         sum += i;
     }
     var end = Date.now();
-    console.log(end - start);
+    console.log('函数执行了：' + (end - start) + 'ms');
+
+    var now = new Date;
+    console.log(now.getTime());
+
+    now.setTime(now.getTime() - 100000);
+    // 全局的时间被改变
+    console.log(now);
+
+    console.log('年：' + date.getFullYear());
+    // 月份从0开始的
+    console.log('月：' + date.getMonth() + 1);
+    console.log('日：' + date.getDate());
+    console.log('小时：' + date.getHours());
+    console.log('分钟：' + date.getMinutes());
+    console.log('秒数：' + date.getSeconds());
+    console.log('毫秒数：' + date.getMilliseconds());
 </script>
 </body>
 </html>
