--- a/javascript/function/autoFunction.html
+++ b/javascript/function/autoFunction.html
@@ -12,6 +12,8 @@
     (function fn1() {
         alert(12222);
     })();
+
+    // fn1(); error fn1 is not defined
     // anonymous匿名函数
     var test = Function('console.log("测试");');
     console.log(test);
