基本包装类型尝试

--- a/javascript/number.html
+++ b/javascript/number.html
@@ -63,6 +63,11 @@
         console.log(parseInt('0xA'));
         // 0
         console.log(parseInt('0xA',10));
+
+        var numberType = new Number(1);
+        // 引用类型
+        console.log(numberType);
+        console.log(typeof numberType);
     </script>
 </body>
 </html>
