--- a/lodash/test.html
+++ b/lodash/test.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="dist/main.js"></script>
+    <script src="dist/main-0dc337271c596291d2f9.js"></script>
 </body>
 </html>
