--- a/lodash/test.html
+++ b/lodash/test.html
@@ -5,5 +5,5 @@
     <title>Document</title>
 </head>
 <body>
-</body>
+<script type="text/javascript" src="dist/main-a8ade4c1bdca97b1d5de.js"></script></body>
 </html>
