--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>hybrid</title>
+    <script src="http://app.zbj.com/base/bridge.js"></script>
 </head>
 <body>
     <button id="callByJs">callbyjs</button>
