--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>hybrid</title>
-    <script src="https://app.zbj.com/base/bridge.js"></script>
+    <script src="javascript/hybrid/bridge.js"></script>
 </head>
+
 <body>
     <button id="callByJs">callbyjs</button>
     <script>
         document.getElementById('callByJs').onclick = function () {
-            console.log(1);
+            var BridgeData = {
+                'service': {
+                    name: 'service',
+                    param: {
+                        'service_id': _this.data('serviceid')
+                    }
+                }
+            };
+            Bridge.callByJS(BridgeData.service);
         }
     </script>
 </body>
+
 </html>
