--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <script>
         document.getElementById('callByJs').onclick = function () {
             var BridgeData = {
-                'service': {
-                    name: 'service',
+                'nav': {
+                    name: 'nav',
                     param: {
-                        'service_id': _this.data('serviceid')
+                        to: 'login' //app登陆
                     }
                 }
             };
