--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 'nav': {
                     name: 'nav',
                     param: {
-                        to: 'login' //app登陆
+                        to: 'login'
                     }
                 }
             };
-            Bridge.callByJS(BridgeData.service);
+            Bridge.callByJS(BridgeData.nav);
         }
     </script>
 </body>
