--- a/javascript/test.html
+++ b/javascript/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>hybrid</title>
-    <script src="javascript/hybrid/bridge.js"></script>
+    <script src="hybrid/bridge.js"></script>
 </head>
 
 <body>
@@ -20,6 +20,10 @@
                 }
             };
             Bridge.callByJS(BridgeData.nav);
+        }
+
+        function alertFun () {
+            alert("alert");
         }
     </script>
 </body>
