--- a/javascript/DOM/attribute.html
+++ b/javascript/DOM/attribute.html
@@ -25,6 +25,15 @@
         var test3 = document.getElementById('test3');
         var deleteAtr = test3.getAttributeNode('data-delete');
         test3.removeAttributeNode(deleteAtr);
+        // 通过attributes属性获取到id的值为test3
+        console.log(test3.attributes.getNamedItem('id').nodeValue);
+        // 设置test1的class error 已经是其他节点的attr
+        // test3.attributes.setNamedItem(classAtr);
+        var classAtr3 = document.createAttribute('class');
+        classAtr3.nodeValue = 'test3';
+        test3.attributes.setNamedItem(classAtr3);
+
+        // test3.attributes.removeNamedItem('class'); 可以删除test3的class属性
     </script>
 </body>
 </html>
