add remove text node method

--- a/CSS/number/index.html
+++ b/CSS/number/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="body">
     <div>
         <div class="number number0-up"></div>
         <div class="number number0-down"></div>
