--- a/javascript/OOP/inherit-prototype.html
+++ b/javascript/OOP/inherit-prototype.html
@@ -40,7 +40,7 @@
         console.log("原因是因为perez.__proto__ === Object.prototype为");
         console.log(perez.__proto__.__proto__.__proto__ === Object.prototype);
         console.log("instanceof Person");
-        console.log(perez instanceof Person);   // false
+        console.log(perez instanceof Person);   // true
         console.log("原因是因为perez.__proto__ === Object.prototype为");
         console.log(perez.__proto__.__proto__ === Person.prototype);
     </script>
