--- a/javascript/function/es6-function*.html
+++ b/javascript/function/es6-function*.html
@@ -28,6 +28,28 @@
         console.log(gen.next().value); // 1
         console.log(gen.next().value); // 2
         console.log(gen.next().value); // undefined
+
+        console.log('generator嵌套_________________________');
+        function* anotherGenerator(i) {
+            yield i + 1;
+            yield i + 2;
+            yield i + 3;
+        }
+
+        function* generator(i) {
+            yield i;
+            yield* anotherGenerator(i);
+            yield i + 10;
+        }
+
+        var gen = generator(10);
+
+        console.log(gen.next().value); // 10
+        console.log(gen.next().value); // 11
+        console.log(gen.next().value); // 12
+        console.log(gen.next().value); // 13
+        console.log(gen.next().value); // 20
+        console.log(gen.next().value); // undefined
     </script>
 </body>
 
