--- a/CSS/BFC.html
+++ b/CSS/BFC.html
@@ -27,9 +27,11 @@
         background-color: #000;
     }
     .margin-t {
-        width: 100px;
-        height: 100px;
-        margin-bottom: 50px;
+        margin-top: 100px;
+        overflow: hidden;
+    }
+    .margin-t p {
+        margin-top: 50px;
         background-color: #00f;
     }
 
@@ -77,7 +79,9 @@
 
     <!-- 上下margin重叠 规则2 -->
     <div class="margin-b"></div>
-    <div class="margin-t"></div>
+    <div class="margin-t">
+        <p>dadsdas</p>
+    </div>
 
     <!-- 清除浮动，规则6 -->
     <div class="wrap">
