--- a/CSS/BFC.html
+++ b/CSS/BFC.html
@@ -16,7 +16,6 @@
         background-color: #f00;
     }
     .right {
-        height: 100px;
         overflow: hidden;
         background-color: #ff0;
     }
@@ -75,7 +74,9 @@
     
     <!-- 自适应两栏布局的标准方法，第2个元素通过overflow:hidden出发了BFC 规则3 && 规则4-->
     <div class="left"></div>
-    <div class="right"></div>
+    <div class="right">
+        按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的按实际到四点就哦啊是假的
+    </div>
 
     <!-- 上下margin重叠 规则2 -->
     <div class="margin-b"></div>
