--- a/javascript/DOM/HTMCollection&&NodeList.html
+++ b/javascript/DOM/HTMCollection&&NodeList.html
@@ -11,6 +11,12 @@
         <p>modify1</p>
     </div>
     <script>
+    	/*  
+    		(1)NodeList
+			一个节点的集合，既可以包含元素和其他节点(注释节点、文本节点等)。
+			(2)HTMLCollection
+			元素集合, 只有Element 
+		*/
         var throughId = document.getElementById('test');
 
         var throughTag = document.getElementsByTagName('div');
