--- a/javascript/pass-by-reference.html
+++ b/javascript/pass-by-reference.html
@@ -6,16 +6,15 @@
 </head>
 <body>
 	<script type="text/javascript">
-	function changeFun(a, b, c)
-		{
+		function changeFun(a, b, c) {
 			a = a + 1;
 			b.item = "changed";
-			c = {item: "changed"};
+			c = { item: "changed" };
 		}
 
 		var num = 10;
-		var obj1 = {item: "unchanged"};
-		var obj2 = {item: "unchanged"};
+		var obj1 = { item: "unchanged" };
+		var obj2 = { item: "unchanged" };
 
 		changeFun(num, obj1, obj2);
 
@@ -27,4 +26,5 @@
 		//http://stackoverflow.com/questions/518000/is-javascript-a-pass-by-reference-or-pass-by-value-language
 	</script>
 </body>
+
 </html>
