--- a/javascript/ES6/es6-rest-spread.html
+++ b/javascript/ES6/es6-rest-spread.html
@@ -20,11 +20,19 @@
         Math.max.apply(null, [1, 2, 3, 4]); // 4
         Math.max(...[1, 2, 3, 4]);
 
-        // 解耦赋值
-        var [a, b, c] = [...[1, 2, 3]];
+        // 解耦赋值 Destructuring
+        let [a, b, c] = [...[1, 2, 3]];
+        let [first,...last]=[1, 2, 3, 4, 5];
         console.log(a); // 1
         console.log(b); // 2
         console.log(c); // 3
+        console.log(first); // 1
+        console.log(last); // [2, 3, 4, 5]
+
+        // cacat
+        let arr = [1, 2, 3];
+        console.log(arr.concat([4]));
+        console.log([...arr, 4]);
     </script>
 </body>
 </html>
