--- a/CSS/flex/flex-base.html
+++ b/CSS/flex/flex-base.html
@@ -12,6 +12,10 @@
         margin: 0;
         list-style: none;
     }
+    ul {
+        background-color: #eee;
+        margin-top: 10px;
+    }
     .flex {
         display: flex;
     }
